--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <div id="header">
-            <a href="https://graph.baidu.com/pcpage/index?tpl_from=pc" id="image-search">image-search</a>
-            <a href="https://www.baidu.com/gaoji/advanced.html" id="advanced-search">advanced-search</a>
+            <a href="imagesearch.html" id="image-search">image-search</a>
+            <a href="advancedsearch.html" id="advanced-search">advanced-search</a>
         </div>
         <form action="https://baidu.com/s">
             <div id="main">
